# Gonsder

./: .gitignore  CMakeLists.txt  README.md
src/: Gonsder_RPG.c  Introduz.DisVicS2  dina_string.h  os_check_use.h  padrao_nome.h  teste dano.c  work_list.need
src/controller/: CombatController.cpp  CombatController.h  Director.cpp  Director.h
src/model/: Backpack.cpp  Backpack.h  CharacterSkill.cpp  CharacterSkill.h  LiveThing.cpp  LiveThing.h  MainCharacter.cpp  MainCharacter.h  SaveGame.cpp  SaveGame.h  Skills.cpp  Skills.h
src/model/business/: SaveGame.cpp  SaveGame.h
src/model/entity/: Player.cpp  Player.h
src/util/: UsableEnums.h  name_partner.h  os_check_use.h  padrao_nome.h
src/view/: Gonsder.cpp  StoryScript.hpp  UserStories.hpp
